# cos-rust-sdk

./: Cargo.toml  MEDIA_GUIDE.md  README.md  STS_GUIDE.md  STS_TROUBLESHOOTING.md
examples/: basic_usage.rs  format_support.rs  media_upload.rs  real_file_upload.rs  sts_example.rs
src/: auth.rs  bucket.rs  client.rs  config.rs  error.rs  lib.rs  object.rs  sts.rs
