[package]
name = "cos-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "腾讯云对象存储 COS Rust SDK"
license = "MIT"
repository = "https://github.com/your-username/cos-rust-sdk"
keywords = ["tencent", "cos", "cloud", "storage", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5"
thiserror = "1.0"
log = "0.4"
base64 = "0.22"
md5 = "0.7"
rand = "0.8"
bytes = "1.0"
futures = "0.3"
quick-xml = { version = "0.31", features = ["serialize"] }
urlencoding = "2.1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
